refactor: chane min max to clamp